Configuring Changes to Test actuator

--- a/items-service-dev.properties
+++ b/items-service-dev.properties
@@ -1,3 +1,3 @@
-text.configuration=Sample Text Configuration in Development
-configuration.name=Rafael López
-configuration.email=ralphdoe12@gmail.com
+text.configuration=Sample Text Configuration in Development - Testing Changes with Actuator
+configuration.name=Rafael Lopez
+configuration.email=johndoe@gmail.com
